--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,10 @@
     "lib": ["es2015", "es2016", "es2017"],
     "strict": true,
     "sourceMap": true,
-    "declaration": true
+    "declaration": true,
+    "outDir": "lib/"
   },
-  "include": [
-    "lib/index.ts"
+  "files": [
+    "src/index.ts"
   ]
 }
