--- a/package.json
+++ b/package.json
@@ -9,23 +9,22 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "tsc && ava-ts",
-    "posttest": "tslint --project . 'src/**/*.ts' -e '**/*.d.ts'",
-    "prepublishOnly": "npm run build && npm test"
-  },
-  "dependencies": {
-    "pify": "^3.0.0"
+    "test": "ava-ts",
+    "posttest": "tslint --project . 'src/**/*.ts'",
+    "prepublishOnly": "run-s build test"
   },
   "devDependencies": {
-    "@types/node": "^8.0.47",
-    "@types/pify": "^3.0.0",
-    "@types/temp": "^0.8.31",
-    "ava": "^0.23.0",
-    "ava-ts": "^0.23.0",
-    "temp": "^0.8.3",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.8.0",
-    "tslint-config-standard": "^6.0.1",
-    "typescript": "^2.5.3"
+    "ava": "^0.25.0",
+    "ava-ts": "^0.25.0",
+    "npm-run-all": "^4.1.3",
+    "ts-node": "^6.0.0",
+    "tslint": "^5.11.0",
+    "tslint-config-standard": "^7.1.0",
+    "typescript": "^2.9.0"
+  },
+  "dependencies": {
+    "fast-sha256": "^1.1.0",
+    "tweetnacl": "^1.0.0",
+    "tweetnacl-util": "^0.15.0"
   }
 }
