--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "target": "es5",
     "module": "commonjs",
     "lib": ["es2015", "es2016", "es2017"],
