--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "key-store",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "description": "AES-256-encrypted key store written in TypeScript.",
   "author": "Andy Wermke (https://github.com/andywer)",
   "license": "MIT",
