--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "key-store",
   "version": "1.0.0",
-  "description": "AES-256-encrypted key store written in TypeScript.",
+  "description": "Isomorphic encrypted key store written in TypeScript.",
   "author": "Andy Wermke (https://github.com/andywer)",
   "license": "MIT",
   "repository": "andywer/key-store",
