--- a/package.json
+++ b/package.json
@@ -9,22 +9,30 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "ava-ts",
+    "test": "ava test/**/*.test.ts",
     "posttest": "tslint --project . 'src/**/*.ts'",
     "prepublishOnly": "run-s build test"
   },
   "devDependencies": {
-    "ava": "^0.25.0",
-    "ava-ts": "^0.25.2",
+    "ava": "^1.4.1",
     "npm-run-all": "^4.1.3",
     "ts-node": "^6.0.0",
-    "tslint": "^5.11.0",
-    "tslint-config-standard": "^7.1.0",
+    "tslint": "^5.15.0",
+    "tslint-config-standard": "^8.0.1",
     "typescript": "^2.9.0"
   },
   "dependencies": {
     "fast-sha256": "^1.1.0",
     "tweetnacl": "^1.0.0",
     "tweetnacl-util": "^0.15.0"
+  },
+  "ava": {
+    "compileEnhancements": false,
+    "extensions": [
+      "ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ]
   }
 }
